--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -9,7 +9,7 @@
   
   {{ recipe_form | crispy }}
   {% csrf_token %}
-  <button type="submit" value="Add Recipe">Post Recipe</button>
+  <button type="submit" value="Add Recipe" class="btn btn-dark add-btn">Post Recipe</button>
 
 </form>
 {% endblock %}
