--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -4,13 +4,14 @@
 
 <h1>Change Password</h1>
 
-<div>
-    <form method="POST" action="" class="form">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button>Change Password</button>
-    </form>
-    
+<div class="container-fluid" id="change-pw">
+    <div class="row">
+        <form method="POST" action="" class="form">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button>Change Password</button>
+        </form>
+    </div>
 </div>
 
 
