--- a/templates/my_drafts.html
+++ b/templates/my_drafts.html
@@ -35,9 +35,7 @@
                         <img src="{{ recipes.featured_image.url }}" alt="recipe image">
                         {% endif %}
                         <div class="card-body">
-                            <a href="{% url 'recipe_detail' recipes.slug %}">
                                 <h5 class="card-title">{{ recipes.title }}</h5>
-                            </a>
                             <div class="card-text">
                                 <span>
                                     <a href="{% url 'update_draft' recipes.pk %}"><i
@@ -68,10 +66,10 @@
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
                 {% if page_obj.has_previous %}
-                <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+                <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link paginate">&laquo; Prev </a></li>
                 {% endif %}
                 {% if page_obj.has_next %}
-                <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+                <li><a href="?page={{ page_obj.next_page_number }}" class="page-link paginate"> Next &raquo;</a></li>
                 {% endif %}
             </ul>
         </nav>
