--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -6,13 +6,22 @@
     <h1>Register</h1>
 </header>
 
+<!-- User Registration Form -->
 <form method="POST" action="" class="form">
     {% csrf_token %}
 
-    <input type="email" name="email" placeholder="Email">
-    <input type="username" name="username" placeholder="Username">
-    <input type="password" name="password1" placeholder="Password">
-    <input type="password" name="password2" placeholder="Repeat Password">
+    <label for="email">Email</label><br>
+    <input type="email" name="email">
+    <br>
+    <label for="username">Username</label><br>
+    <input type="username" name="username">
+    <br>
+    <label for="password1">Password</label><br>
+    <input type="password" name="password1">
+    <br>
+    <label for="password2">Repeat Password</label><br>
+    <input type="password" name="password2">
+    <br>
 
     <button type="submit" class="btn btn-primary">Register</button>
     
