--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -3,6 +3,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
+<!-- Add Recipe Form -->
 <h1>Add Recipe</h1>
 
 <form method="post" style="margin-top: 1.3em;">
