stylling to accounts pages and recipe pages

--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -4,12 +4,12 @@
 
 <h1>Change Password</h1>
 
-<div class="container-fluid" id="change-pw">
+<div class="container-fluid" id="change-pw" class="accounts-forms">
     <div class="row">
         <form method="POST" action="" class="form">
             {% csrf_token %}
             {{ form.as_p }}
-            <button>Change Password</button>
+            <button class="btn btn-dark all-btn">Change Password</button>
         </form>
     </div>
 </div>
