--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-<div class="rec-detail">
+<div class="rec-detail excerpt">
     <hr>
     <h2>Notes</h2>
     <span>{{ recipe.excerpt|safe }}</span>
