--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,6 +78,24 @@ h1 {
     margin: 20px;
 }
 
+/* Add Recipe Form Styling */
+#error_1_id_title,
+#error_1_id_preparation_length,
+#error_1_id_cooking_length,
+#error_1_id_total_length,
+#error_1_id_ingredients,
+#error_1_id_instructions {
+    display: none;
+}
+
+.form-control.is-invalid {
+    border-color: #ced4da;
+}
+
+#div_id_instructions input {
+    border: 1px solid #ced4da;
+}
+
 /* Recipe Card Styling */
 .card-position {
     margin-bottom: 10px;
@@ -94,7 +112,7 @@ h1 {
     object-fit: cover;
 }
 
-/* recipe detail styling */
+/* Recipe detail styling */
 .recipe-heading {
     height: 301px;
     background-color: #ECECE2;
@@ -123,33 +141,37 @@ h1 {
 }
 
 .left-div {
-    width: 25%;
+    width: 30%;
 }
 
 .right-div {
     height: 300px;
-    width: 75%;
+    width: 65%;
 }
 
 .method {
-    width: 75%;
-    float: right;
-    padding-left: 15px;
+    width: 65%;
+    float: left;
+    padding-left: 30px;
     padding-right: 15px;
 }
 
 .ingredients {
-    width: 25%;
+    width: 30%;
     padding-left: 15px;
     padding-right: 15px;
 }
 
-/* Add Recipe Styling */
-.add-btn {
+.excerpt {
+    min-height: 150px;
+}
+
+/* Button Styling */
+.all-btn {
     margin-top: 20px;
 }
 
-.add-btn:hover {
+.all-btn:hover {
     color: #A7490D;
     background-color: ghostwhite;
 }
@@ -195,6 +217,25 @@ h1 {
     color: #A7490D;
 }
 
+/* Registration Form*/
+.registration-input {
+    width: 100%;
+}
+
+/* Login and Registration Form Styling */
+.link-item:hover {
+    color: #A7490D;
+}
+
+.accounts-forms {
+    margin: 0 auto;
+    width: 50%;
+    background-color: #ECECE2;
+    padding: 40px;
+    border-radius: 10px;
+    margin-bottom: 30px;
+}
+
 /* Change Password Form Styling */
 #change-pw {
     margin: 0 auto;
@@ -205,24 +246,16 @@ h1 {
     margin-bottom: 30px;
 }
 
-/* Form Styling */
+.form-input-fields{
+    margin: 10px;
+}
+
 .errorlist {
     display: none;
 }
 
-#error_1_id_title,
-#error_1_id_preparation_length,
-#error_1_id_cooking_length,
-#error_1_id_total_length,
-#error_1_id_ingredients,
-#error_1_id_instructions {
-    display: none;
-}
-
-.form-control.is-invalid {
-    border-color: #ced4da;
-}
-
-#div_id_instructions input {
-    border: 1px solid #ced4da;
+#id_old_password,
+#id_new_password1,
+#id_new_password2 {
+    width: 100%;
 }
