--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                         {% endif %}
                         <div class="card-body">
                             <a href="{% url 'recipe_detail' recipes.slug %}">
-                                <h5 class="card-title">{{ recipes.title }}</h5>
+                                <h5 class="card-title rec-card-title">{{ recipes.title }}</h5>
                             </a>
                             <p class="card-text">By {{ recipes.author }}</p>
                             <div class="card-text">
@@ -62,10 +62,10 @@
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
                 {% if page_obj.has_previous %}
-                <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link paginate">&laquo; Prev </a></li>
+                <li><a href="?page={{ page_obj.previous_page_number }}" class="btn btn-dark all-btn">&laquo; Prev </a></li>
                 {% endif %}
                 {% if page_obj.has_next %}
-                <li><a href="?page={{ page_obj.next_page_number }}" class="page-link paginate"> Next &raquo;</a></li>
+                <li><a href="?page={{ page_obj.next_page_number }}" class="btn btn-dark all-btn"> Next &raquo;</a></li>
 
                 {% endif %}
             </ul>
