--- a/templates/my_drafts.html
+++ b/templates/my_drafts.html
@@ -35,15 +35,16 @@
                         <img src="{{ recipes.featured_image.url }}" alt="recipe image">
                         {% endif %}
                         <div class="card-body">
-                                <h5 class="card-title">{{ recipes.title }}</h5>
+                                <h5 class="card-title rec-card-title">{{ recipes.title }}</h5>
+                                <hr>
                             <div class="card-text">
-                                <span>
-                                    <a href="{% url 'update_draft' recipes.pk %}"><i
-                                            class="fas fa-pencil-alt"></i>Edit</a>
+                                <span class="edit-btn">
+                                    <a href="{% url 'update_draft' recipes.pk %}" class="edit"><i
+                                            class="fas fa-pencil-alt edit-icon"></i>Edit</a>
                                 </span>
-                                <span>
-                                    <a href="{% url 'delete_draft' recipes.pk %}"><i
-                                            class="far fa-trash-alt"></i>Delete</a>
+                                <span class="del-btn">
+                                    <a href="{% url 'delete_draft' recipes.pk %}" class="del"><i
+                                            class="far fa-trash-alt del-icon"></i>Delete</a>
                                 </span>
                             </div>
                         </div>
@@ -66,10 +67,10 @@
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
                 {% if page_obj.has_previous %}
-                <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link paginate">&laquo; Prev </a></li>
+                <li><a href="?page={{ page_obj.previous_page_number }}" class="btn btn-dark all-btn">&laquo; Prev </a></li>
                 {% endif %}
                 {% if page_obj.has_next %}
-                <li><a href="?page={{ page_obj.next_page_number }}" class="page-link paginate"> Next &raquo;</a></li>
+                <li><a href="?page={{ page_obj.next_page_number }}" class="btn btn-dark all-btn"> Next &raquo;</a></li>
                 {% endif %}
             </ul>
         </nav>
