--- a/templates/my_recipes.html
+++ b/templates/my_recipes.html
@@ -21,14 +21,15 @@
                         {% endif %}
                         <div class="card-body">
                             <a href="{% url 'recipe_detail' recipes.slug %}">
-                                <h5 class="card-title">{{ recipes.title }}</h5>
+                                <h5 class="card-title rec-card-title">{{ recipes.title }}</h5>
                             </a>
-                            <div class="card-text">
+                            <div class="card-text edit-del">
+                                <hr>
                                 <span>
-                                    <a href="{% url 'update_recipe' recipes.pk %}"><i class="fas fa-pencil-alt"></i>Edit</a>
+                                    <a href="{% url 'update_recipe' recipes.pk %}" class="edit"><i class="fas fa-pencil-alt edit-icon"></i>Edit</a>
                                 </span>
                                 <span>
-                                    <a href="{% url 'delete_recipe' recipes.pk %}"><i class="far fa-trash-alt"></i>Delete</a>
+                                    <a href="{% url 'delete_recipe' recipes.pk %}" class="del"><i class="far fa-trash-alt del-icon"></i>Delete</a>
                                 </span>
                             </div>
                         </div>
@@ -51,10 +52,10 @@
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
                 {% if page_obj.has_previous %}
-                <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link paginate">&laquo; Prev </a></li>
+                <li><a href="?page={{ page_obj.previous_page_number }}" class="paginate btn btn-dark all-btn">&laquo; Prev </a></li>
                 {% endif %}
                 {% if page_obj.has_next %}
-                <li><a href="?page={{ page_obj.next_page_number }}" class="page-link paginate"> Next &raquo;</a></li>
+                <li><a href="?page={{ page_obj.next_page_number }}" class="paginate btn btn-dark all-btn"> Next &raquo;</a></li>
                 {% endif %}
             </ul>
         </nav>
