--- a/templates/my_drafts.html
+++ b/templates/my_drafts.html
@@ -39,12 +39,12 @@
                                 <hr>
                             <div class="card-text">
                                 <span class="edit-btn">
-                                    <a href="{% url 'update_draft' recipes.pk %}" class="edit"><i
-                                            class="fas fa-pencil-alt edit-icon"></i>Edit</a>
+                                    <a href="{% url 'update_draft' recipes.pk %}" class="btn btn-dark edit"><i
+                                        class="fas fa-pencil-alt edit-icon"></i>Edit</a>
                                 </span>
                                 <span class="del-btn">
-                                    <a href="{% url 'delete_draft' recipes.pk %}" class="del"><i
-                                            class="far fa-trash-alt del-icon"></i>Delete</a>
+                                    <a href="{% url 'delete_draft' recipes.pk %}" class="btn btn-danger" class="del"><i
+                                        class="far fa-trash-alt del-icon"></i>Delete</a>
                                 </span>
                             </div>
                         </div>
