--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <h1>Recipes</h1>
                 {% for recipes in recipe_list %}
-                <div class="col-md-3 mt-3">
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="card card-position" style="width: 18rem;">
                         {% if "placeholder" in recipes.featured_image.url %}
                         <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
