--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -34,6 +34,24 @@
                         Total: {{ recipe.total_length }}
                     </small>
                 </div>
+                <!--Code from Code Institute Blog Follow Along project-->
+                {% if user.is_authenticated %}
+                <form class="d-inline" action="{% url 'recipe_like' recipe.slug %}" method="POST">
+                    {% csrf_token %}
+                    {% if liked %}
+                    <button type="submit" name="recipe_likes" value="{{recipe.slug}}" class="btn-like">
+                        <i class="fas fa-heart"></i>
+                    </button>
+                    {% else %}
+                    <button type="submit" name="recipe_likes" value="{{recipe.slug}}" class="btn-like">
+                        <i class="far fa-heart"></i>
+                    </button>
+                    {% endif %}
+                </form>
+                {% else %}
+                <span><i class="far fa-heart"></i></span>
+                {% endif %}
+                <span class="text-secondary">{{ recipe.number_of_likes }}</span>
             </span>
         </div>
     </div>
@@ -45,7 +63,7 @@
         <h2>Ingredients</h2>
         <span>{{ recipe.ingredients|safe }}</span>
     </div>
-    
+
     <div class="method">
         <h2>Method</h2>
         <span>{{ recipe.instructions|safe }}</span>
