--- a/templates/my_drafts.html
+++ b/templates/my_drafts.html
@@ -34,7 +34,7 @@
                         <img src="{{ recipes.featured_image.url }}" alt="recipe image">
                         {% endif %}
                         <div class="card-body">
-                                <h5 class="card-title rec-card-title">{{ recipes.title }}</h5>
+                                <h5 class="card-title draft-rec-card-title">{{ recipes.title }}</h5>
                                 <hr>
                             <div class="card-text">
                                 <span class="edit-btn">
