--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -4,7 +4,7 @@
 
 <h1>Change Password</h1>
 
-<div class="container-fluid" id="change-pw" class="accounts-forms">
+<div class="container-fluid" id="change-pw" class="password-form">
     <div class="row">
         <form method="POST" action="" class="form">
             {% csrf_token %}
