--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -7,34 +7,40 @@
 </header>
 
 <!-- User Registration Form -->
-<form method="POST" action="" class="form accounts-forms">
-    {% csrf_token %}
+<div id="logging-in">
+    <div>
+        <img src="https://res.cloudinary.com/sjb21/image/upload/v1644420311/monika-grabkowska-TAj4X5-eRqE-unsplash-min_oopdwn.jpg"
+            alt="Oranges photo" class="accounts-img">
+    </div>
+    <form method="POST" action="" class="form accounts-forms">
+        {% csrf_token %}
 
-    <div class="form-input-fields">
-        <label for="email">Email</label><br>
-        <input type="email" name="email" class="registration-input">
-    </div>
-    <div class="form-input-fields">
-        <label for="username">Username</label><br>
-        <input type="username" name="username" class="registration-input">
-    </div>
-    <div class="form-input-fields">
-        <label for="password1">Password</label><br>
-        <input type="password" name="password1" class="registration-input">
-    </div>
-    <div class="form-input-fields">
-        <label for="password2">Repeat Password</label><br>
-        <input type="password" name="password2" class="registration-input">
-    </div>
-    <div class="form-input-fields">
-        <button type="submit" class="btn btn-dark all-btn">Register</button>
-    </div>
-    {{ form.errors }}
+        <div class="form-input-fields">
+            <label for="email">Email</label><br>
+            <input type="email" name="email" class="registration-input">
+        </div>
+        <div class="form-input-fields">
+            <label for="username">Username</label><br>
+            <input type="username" name="username" class="registration-input">
+        </div>
+        <div class="form-input-fields">
+            <label for="password1">Password</label><br>
+            <input type="password" name="password1" class="registration-input">
+        </div>
+        <div class="form-input-fields">
+            <label for="password2">Repeat Password</label><br>
+            <input type="password" name="password2" class="registration-input">
+        </div>
+        <div class="form-input-fields">
+            <button type="submit" class="btn btn-dark all-btn">Register</button>
+        </div>
+        {{ form.errors }}
 
-    <p class="form-input-fields">Already have an account?
-        Please <a href="{% url 'login' %}" class="link-item">Login</a>!
-    </p>
-</form>
+        <p class="form-input-fields">Already have an account?
+            Please <a href="{% url 'login' %}" class="link-item">Login</a>!
+        </p>
+    </form>
+</div>
 
 
 {% endblock %}
