--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -10,9 +10,9 @@
 <div id="logging-in">
     <div>
         <img src="https://res.cloudinary.com/sjb21/image/upload/v1644420311/monika-grabkowska-TAj4X5-eRqE-unsplash-min_oopdwn.jpg"
-            alt="Oranges photo" class="login-img">
+            alt="Oranges photo" class="accounts-img">
     </div>
-    <form method="POST" action="" class="form login-forms">
+    <form method="POST" action="" class="form accounts-forms">
 
         <!--csrf_token is used to prevent hackers calling my webpage 
             from another site. How to create login page taken from Hacker
