--- a/templates/my_recipes.html
+++ b/templates/my_recipes.html
@@ -19,16 +19,18 @@
                         <img src="{{ recipes.featured_image.url }}" alt="recipe image">
                         {% endif %}
                         <div class="card-body">
-                            <h5 class="card-title rec-card-title">{{ recipes.title }}</h5>
+                            <a href="{% url 'recipe_detail' recipes.slug %}">
+                                <h5 class="card-title rec-card-title">{{ recipes.title }}</h5>
+                            </a>
                             <hr>
                             <div class="card-text">
                                 <span class="edit-btn">
-                                    <a href="{% url 'recipe_detail' recipes.slug %}" class="btn btn-dark edit"><i
-                                        class="fas fa-pencil-alt edit-icon"></i>Edit</a>
+                                    <a href="{% url 'update_recipe' recipes.pk %}" class="btn btn-dark edit"><i
+                                            class="fas fa-pencil-alt edit-icon"></i>Edit</a>
                                 </span>
                                 <span class="del-btn">
-                                    <a href="{% url 'update_recipe' recipes.pk %}" class="btn btn-danger" class="del"><i
-                                        class="far fa-trash-alt del-icon"></i>Delete</a>
+                                    <a href="{% url 'delete_recipe' recipes.pk %}" class="btn btn-danger" class="del"><i
+                                            class="far fa-trash-alt del-icon"></i>Delete</a>
                                 </span>
                             </div>
                         </div>
@@ -46,10 +48,12 @@
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
                 {% if page_obj.has_previous %}
-                <li><a href="?page={{ page_obj.previous_page_number }}" class="paginate btn btn-dark all-btn">&laquo; Prev </a></li>
+                <li><a href="?page={{ page_obj.previous_page_number }}" class="paginate btn btn-dark all-btn">&laquo;
+                        Prev </a></li>
                 {% endif %}
                 {% if page_obj.has_next %}
-                <li><a href="?page={{ page_obj.next_page_number }}" class="paginate btn btn-dark all-btn"> Next &raquo;</a></li>
+                <li><a href="?page={{ page_obj.next_page_number }}" class="paginate btn btn-dark all-btn"> Next
+                        &raquo;</a></li>
                 {% endif %}
             </ul>
         </nav>
