--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -7,7 +7,7 @@
 <h1>Add Recipe</h1>
 
 <!-- Below from Code Institutes CodeStar project -->
-<!-- <div class="container">
+<div class="container">
   <div class="row">
     <div class="col-md-8 offset-md-2">
       {% for message in messages %}
@@ -18,7 +18,7 @@
       {% endfor %}
     </div>
   </div>
-</div> -->
+</div>
 
 <form method="post" id="add-recipe" class="add-recipe">
 
