--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item nav-style">
-                        <a class="nav-link active nav-style" aria-current="page" href="{% url 'home' %}">Home</a>
+                        <a class="nav-link active nav-style" aria-current="page" href="{% url 'home' %}">Recipes</a>
                     </li>
                     {% if user.is_authenticated %}
 
