--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,6 +90,10 @@ h1 {
     margin-left: 15px;
 }
 
+.method li {
+    padding: 10px;
+}
+
 /* #error_1_id_title,
 #error_1_id_preparation_length,
 #error_1_id_cooking_length,
